--- a/src/app/(product)/product/[slug]/page.scss
+++ b/src/app/(product)/product/[slug]/page.scss
@@ -10,10 +10,10 @@
     }
   }
 
-  svg {
+  /* svg {
     width: 15px;
     height: 15px;
-  }
+  } */
   .award {
     width: 25px;
     height: 20px;
