change form build

--- a/src/app/(category)/category/[slug]/page.scss
+++ b/src/app/(category)/category/[slug]/page.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/index.scss';
+@import "../../../../styles/index.scss";
 /* ============ sidebar ================*/
 .horizontal-slider {
   width: 100%;
@@ -42,8 +42,9 @@
 }
 
 .price-input {
-  width: 70px;
+  width: 75px;
   height: 20px;
+  text-align: center;
   border: 1px solid $black-color;
   padding: 4px;
   &:focus-visible {
