--- a/src/components/video-card/index.scss
+++ b/src/components/video-card/index.scss
@@ -1,14 +1,13 @@
 @import '../../styles/index.scss';
 
 .video-card {
-  transition: all linear 0.3s;
+  // transition: all linear 0.3s;
   iframe {
     width: 100%;
   }
-  .video-title {
-    transition: all linear 0.3s;
-  }
+
   &:hover {
     transform: scale(1.02);
+    transition: all ease-in 0.3s;
   }
 }
