--- a/src/app/(product)/product/[slug]/page.scss
+++ b/src/app/(product)/product/[slug]/page.scss
@@ -1,4 +1,4 @@
-@import "../../../../styles/index.scss";
+@import '../../../../styles/index.scss';
 
 .product-details {
   border-top: 1px solid #ececec;
@@ -61,6 +61,17 @@
     border-top: 1px solid #ececec;
     border-bottom: 1px solid #ececec;
   }
+  .share-item {
+    .share-popup {
+      opacity: 0;
+      transition: all linear 0.3s;
+    }
+    &:hover {
+      .share-popup {
+        opacity: 1;
+      }
+    }
+  }
   .r-price {
     color: $nonary-color;
   }
@@ -107,7 +118,7 @@
       .react-tabs__tab {
         cursor: pointer;
         padding: 8px 30px;
-        font-family: "Gotham";
+        font-family: 'Gotham';
         font-weight: 700;
         border-right: 1px solid $white-color;
         font-size: 15px;
@@ -117,7 +128,7 @@
           position: relative;
           &::after {
             position: absolute;
-            content: "";
+            content: '';
             bottom: 0;
             left: 0;
             width: 100%;
@@ -137,7 +148,7 @@
       .tab-panel {
         padding: 12px;
         .specification {
-          font-family: "Gotham";
+          font-family: 'Gotham';
           font-size: 12px;
           font-weight: 400;
         }
