--- a/src/app/compare/page.scss
+++ b/src/app/compare/page.scss
@@ -78,4 +78,8 @@
   .danger-text {
     color: $octonary-color;
   }
+  .discount {
+    color: $white-color;
+    background: $octonary-color;
+  }
 }
