--- a/src/components/card/index.scss
+++ b/src/components/card/index.scss
@@ -65,9 +65,9 @@
     }
   }
   .stock-out {
-    background: #6c757d;
+    background: #92989d ;
     &:hover {
-      background: #6c757d;
+      background: #92989d ;
     }
   }
 }
