--- a/src/app/emi/page.scss
+++ b/src/app/emi/page.scss
@@ -2,4 +2,12 @@
 .emi {
   padding-top: 60px;
   padding-bottom: 80px;
+
+  .emi-table {
+    border: 1px solid $border-color;
+
+    .border-color {
+      border-color: $border-color;
+    }
+  }
 }
