--- a/src/app/(product)/product/[slug]/page.scss
+++ b/src/app/(product)/product/[slug]/page.scss
@@ -96,6 +96,10 @@
       align-items: center;
       height: 100%;
       transition: all linear 0.3s;
+      &:hover {
+        color: $white-color;
+        background: $primary-color;
+      }
     }
   }
 }
