--- a/src/app/not-found.scss
+++ b/src/app/not-found.scss
@@ -1,5 +1,9 @@
 /* styles/Custom404.module.css */
+@import "../styles/index.scss";
 
+.not-found {
+  background: $white-color;
+}
 .custom-404 {
   text-align: center;
   padding: 2rem;
@@ -18,4 +22,7 @@
   color: #0070f3;
   text-decoration: none;
   font-weight: 600;
+}
+.back-btn {
+  background: $primary-color;
 }
