--- a/src/app/(order)/checkout/page.scss
+++ b/src/app/(order)/checkout/page.scss
@@ -64,6 +64,11 @@
     color: $octonary-color;
   }
 }
+.checkout-page {
+  .brand-color {
+    color: $primary-color;
+  }
+}
 
 @supports (-webkit-appearance: none) {
   #location option {
