--- a/src/app/compare/page.scss
+++ b/src/app/compare/page.scss
@@ -1,4 +1,4 @@
-@import '../../styles/index.scss';
+@import "../../styles/index.scss";
 .compare {
   padding-top: 60px;
   padding-bottom: 80px;
@@ -47,6 +47,9 @@
         td {
           border: 1px solid $tertiary-color;
           border-top: 0;
+          .image-area {
+            background: $white-color;
+          }
         }
         .icons {
           svg {
