replace background color from sass

--- a/src/app/(Blogs)/blogs/[slug]/page.scss
+++ b/src/app/(Blogs)/blogs/[slug]/page.scss
@@ -23,7 +23,7 @@
     }
 
     &:hover {
-      background: $primary-color;
+      background: $primary-background-color;
 
       svg {
         color: $white-color;
