--- a/src/app/(category)/category/[slug]/page.scss
+++ b/src/app/(category)/category/[slug]/page.scss
@@ -53,7 +53,7 @@
 }
 /* ============ sidebar End================*/
 .filter-bar {
-  background: $secondary-color;
+  background: $secondary-background-color;
 
   .icon {
     color: $nonary-color;
