--- a/src/app/(order)/cart/page.scss
+++ b/src/app/(order)/cart/page.scss
@@ -86,7 +86,7 @@
 }
 
 .cart-service {
-  background: $primary-color;
+  background: $primary-background-color;
   margin-bottom: 80px;
   .service-card {
     color: $white-color;
