--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -13,3 +13,6 @@ $decenary-color: #d6d6d6;
 $ash-color: #b3b2b3;
 $hover-color: #2456b5;
 $light-border: #ececec;
+
+$primary-background-color: #164194;
+$secondary-background-color: #f1f1f1;
