--- a/src/app/(order)/checkout/page.scss
+++ b/src/app/(order)/checkout/page.scss
@@ -27,7 +27,7 @@
           width: 100%;
           height: 1px;
           content: "";
-          background: $primary-color;
+          background: $primary-background-color;
         }
       }
     }
