--- a/src/app/(product)/product/[slug]/page.scss
+++ b/src/app/(product)/product/[slug]/page.scss
@@ -117,7 +117,7 @@
       box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
       .react-tabs__tab-list {
         display: flex;
-        background: $secondary-color;
+        background: $secondary-background-color;
         font-family: $primary-font;
         font-size: 20px;
         font-weight: 700;
@@ -141,7 +141,7 @@
             left: 0;
             width: 100%;
             height: 2px;
-            background: $primary-color;
+            background: $primary-background-color;
           }
         }
         &:focus-visible {
@@ -179,12 +179,12 @@
     border: 1px solid $primary-color;
     transition: all linear 0.3s;
     &:hover {
-      background: $primary-color;
+      background: $primary-background-color;
       color: $white-color;
     }
   }
   .selected {
-    background: $primary-color;
+    background: $primary-background-color;
     color: $white-color;
   }
 }
