--- a/src/app/compare/page.scss
+++ b/src/app/compare/page.scss
@@ -10,14 +10,14 @@
     transition: all linear 0.3s;
 
     &:hover {
-      background: $primary-color;
+      background: $primary-background-color;
       color: $white-color;
     }
   }
 
   .compare-table {
     .heading {
-      background: $secondary-color;
+      background: $secondary-background-color;
     }
     thead {
       .header {
@@ -29,7 +29,7 @@
     }
     tbody {
       tr {
-        background: $secondary-color;
+        background: $secondary-background-color;
         transition: all linear 0.3s;
 
         &:hover {
