--- a/src/app/profile/order/page.scss
+++ b/src/app/profile/order/page.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/index.scss';
+@import "../../../styles/index.scss";
 
 .order-table {
   box-shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.05);
@@ -8,7 +8,7 @@
   }
 
   .table-heading {
-    background: $secondary-color;
+    background: $secondary-background-color;
   }
   tbody {
     tr {
@@ -17,7 +17,7 @@
         background: $quaternary-color;
       }
       &:hover {
-        background: $secondary-color;
+        background: $secondary-background-color;
       }
       td {
         border-right: 1px solid $secondary-color;
