--- a/src/app/profile/ticket/page.scss
+++ b/src/app/profile/ticket/page.scss
@@ -1,10 +1,10 @@
-@import '../../../styles/index.scss';
+@import "../../../styles/index.scss";
 
 .ticket-table {
   box-shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.05);
 
   .table-heading {
-    background: $secondary-color;
+    background: $secondary-background-color;
   }
   tbody {
     tr {
@@ -13,7 +13,7 @@
         background: $quaternary-color;
       }
       &:hover {
-        background: $secondary-color;
+        background: $secondary-background-color;
       }
       td {
         border-right: 1px solid $secondary-color;
