--- a/src/components/box/index.scss
+++ b/src/components/box/index.scss
@@ -1,4 +1,4 @@
-@import '../../styles/index.scss';
+@import "../../styles/index.scss";
 
 .box {
   border: 1px solid $border-color;
@@ -9,7 +9,7 @@
     .step {
       width: 20px;
       height: 20px;
-      background: $primary-color;
+      background: $primary-background-color;
       color: $white-color;
       display: flex;
       justify-content: center;
