--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -1,7 +1,7 @@
-@import '../../styles/index.scss';
+@import "../../styles/index.scss";
 
 .button {
-  background: $primary-color;
+  background: $primary-background-color;
   color: $white-color;
   border: 0;
   transition: all linear 0.3s;
