--- a/src/components/card/index.scss
+++ b/src/components/card/index.scss
@@ -29,7 +29,7 @@
     transition: all linear 0.3s;
 
     &:hover {
-      background: $primary-color;
+      background: $primary-background-color;
       color: $white-color;
       cursor: pointer;
     }
@@ -38,7 +38,7 @@
     transition: all linear 0.3s;
 
     &:hover {
-      background: $primary-color;
+      background: $primary-background-color;
       color: $white-color;
       cursor: pointer;
     }
@@ -53,11 +53,11 @@
       visibility: visible;
     }
     /*  .discount {
-      // background: $primary-color;
+      //background: $primary-background-color;
       // color: $white-color;
     }
     .new {
-      background: $primary-color;
+     background: $primary-background-color;
       color: $white-color;
     } */
     .product-title {
