--- a/src/components/question-ans/index.scss
+++ b/src/components/question-ans/index.scss
@@ -1,10 +1,10 @@
-@import '../../styles/index.scss';
+@import "../../styles/index.scss";
 
 .question {
   box-shadow: 0px 0px 14px 1px rgba(0, 0, 0, 0.07);
 
   .open {
-    background: $primary-color;
+    background: $primary-background-color;
 
     .icon {
       color: $white-color;
