--- a/src/components/title/index.scss
+++ b/src/components/title/index.scss
@@ -1,4 +1,4 @@
-@import '../../styles/index.scss';
+@import "../../styles/index.scss";
 
 .category-title {
   border-bottom: 2px solid $light-border;
@@ -8,7 +8,7 @@
   transition: all linear 0.3s;
 
   &:hover {
-    background: $primary-color;
+    background: $primary-background-color;
     color: $white-color;
   }
 }
