--- a/src/app/(order)/checkout/page.scss
+++ b/src/app/(order)/checkout/page.scss
@@ -68,6 +68,6 @@
 @supports (-webkit-appearance: none) {
   #location option {
     color: #000;
-    background: $white-color;
+    background: $tertiary-background-color;
   }
 }
