--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -25,7 +25,7 @@
   color: $white-color;
 }
 .white-bg {
-  background: $white-color;
+  background: $tertiary-background-color;
 }
 .white-hover-text {
   &:hover {
