--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -91,7 +91,7 @@
   .more-btn {
     padding: 7px 15px;
     transition: all linear 0.3s;
-    // background: $white-color;
+    // background: $tertiary-background-color;
     box-shadow: $primary-shadow;
 
     &:hover {
