--- a/src/components/megamenu/index.scss
+++ b/src/components/megamenu/index.scss
@@ -6,7 +6,7 @@
     right: 0;
   }
   .sub-heading {
-    background: $white-color;
+    background: $tertiary-background-color;
     width: 230px;
     top: 37px;
     left: 0;
@@ -21,7 +21,7 @@
         width: 220px;
         right: 0;
         top: 0px;
-        background: $white-color;
+        background: $tertiary-background-color;
         transform: translateX(100%);
         /*  padding: 10px;
         padding-top: 0; */
