--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -16,3 +16,4 @@ $light-border: #ececec;
 
 $primary-background-color: #164194;
 $secondary-background-color: #f1f1f1;
+$tertiary-background-color: #fff;
