--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -1,10 +1,10 @@
-@import '../../styles/index.scss';
+@import "../../styles/index.scss";
 
 footer {
   padding-top: 40px;
   border-top: 1px solid #cccccc;
 
-  background: $white-color;
+  background: $tertiary-background-color;
 
   .link-item {
     transition: all linear 0.3s;
