--- a/src/components/share-popup/index.scss
+++ b/src/components/share-popup/index.scss
@@ -1,7 +1,7 @@
-@import '../../styles/index.scss';
+@import "../../styles/index.scss";
 
 .share-popup {
-  background: $white-color;
+  background: $tertiary-background-color;
   z-index: 5;
   padding: 5px 7px;
   display: flex;
