--- a/src/app/(order)/cart/page.scss
+++ b/src/app/(order)/cart/page.scss
@@ -4,7 +4,7 @@
   padding-bottom: 80px;
 
   .direction-area {
-    border: 1px solid $decenary-color;
+    border: 1px solid $quinary-color;
     padding: 20px 42px;
 
     .item-wrapper {
@@ -23,10 +23,10 @@
       }
       .item {
         .icon {
-          color: $ash-color;
+          color: #b3b2b3;
         }
         h4 {
-          color: $ash-color;
+          color: #b3b2b3;
         }
         &:first-child {
           .icon {
@@ -43,20 +43,20 @@
   .cart-elements {
     margin-top: 30px;
     .product-title {
-      border-bottom: 1px solid $decenary-color;
+      border-bottom: 1px solid $quinary-color;
       padding-bottom: 6px;
       .dot-icon {
-        color: $decenary-color;
+        color: $quinary-color;
       }
     }
 
     .product-item {
       padding-top: 15px;
       padding-bottom: 15px;
-      border-bottom: 1px solid $border-color;
+      border-bottom: 1px solid $primary-border-color;
 
       .qnt-1 {
-        border: 1px solid $border-color;
+        border: 1px solid $primary-border-color;
         height: 20px;
         display: flex;
         justify-content: center;
@@ -77,10 +77,10 @@
   }
 
   .cart-summery {
-    border: 1px solid $decenary-color;
+    border: 1px solid $quinary-color;
 
     .summery-border {
-      border-bottom: 1px solid $decenary-color;
+      border-bottom: 1px solid $quinary-color;
     }
   }
 }
@@ -89,12 +89,12 @@
   background: $primary-background-color;
   margin-bottom: 80px;
   .service-card {
-    color: $white-color;
+    color: $tertiary-color;
     h4 {
-      color: $white-color !important;
+      color: $tertiary-color !important;
     }
     h6 {
-      color: $white-color !important;
+      color: $tertiary-color !important;
     }
   }
 }
