--- a/src/app/compare/page.scss
+++ b/src/app/compare/page.scss
@@ -11,7 +11,7 @@
 
     &:hover {
       background: $primary-background-color;
-      color: $white-color;
+      color: $tertiary-color;
     }
   }
 
@@ -33,19 +33,19 @@
         transition: all linear 0.3s;
 
         &:hover {
-          background: $quaternary-color;
+          background: $quaternary-background-color;
         }
 
         &:nth-child(odd) {
           background: $tertiary-background-color;
 
           &:hover {
-            background: $quaternary-color;
+            background: $quaternary-background-color;
           }
         }
 
         td {
-          border: 1px solid $tertiary-color;
+          border: 1px solid $undecenary-color;
           border-top: 0;
         }
         .icons {
@@ -58,10 +58,10 @@
   }
 
   .danger-text {
-    color: $octonary-color;
+    color: $hexary-color;
   }
   .discount {
-    color: $white-color;
-    background: $octonary-color;
+    color: $tertiary-color;
+    background: $hexary-color;
   }
 }
