--- a/src/app/profile/manage-profile/page.scss
+++ b/src/app/profile/manage-profile/page.scss
@@ -1,9 +1,9 @@
-@import '../../../styles/index.scss';
+@import "../../../styles/index.scss";
 .profile {
   .main-area {
     box-shadow: 0 0 15px 3px rgba(0, 0, 0, 0.05);
   }
 }
 .warning {
-  color: $octonary-color;
+  color: $hexary-color;
 }
