--- a/src/app/videos/page.scss
+++ b/src/app/videos/page.scss
@@ -1,6 +1,6 @@
-@import '../../styles/index.scss';
+@import "../../styles/index.scss";
 
 .videos-section {
   padding-bottom: 80px;
-  border-bottom: 1px solid $border-color;
+  border-bottom: 1px solid $primary-border-color;
 }
