--- a/src/components/banner/index.scss
+++ b/src/components/banner/index.scss
@@ -9,7 +9,7 @@
       width: 14px;
       height: 14px;
       border-radius: 50%;
-      background: $quaternary-color;
+      background: $quaternary-background-color;
 
       button {
         opacity: 0;
