--- a/src/components/emi-popup/index.scss
+++ b/src/components/emi-popup/index.scss
@@ -19,10 +19,10 @@
     justify-content: center;
   }
   .border-color {
-    border-color: $border-color;
+    border-color: $primary-border-color;
   }
   .emi-header {
-    border-bottom: 1px solid $border-color;
+    border-bottom: 1px solid $primary-border-color;
   }
 }
 
