--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -19,10 +19,10 @@ footer {
   }
   .subscribe-form {
     input {
-      border-bottom: 1px solid $border-color;
+      border-bottom: 1px solid $primary-border-color;
     }
     .subscribe-icon {
-      color: $border-color;
+      color: $primary-border-color;
     }
   }
   .bottom-image {
