--- a/src/components/invoice/index.scss
+++ b/src/components/invoice/index.scss
@@ -37,7 +37,7 @@
     font-family: $secondary-font;
 
     thead {
-      background: $decenary-color;
+      background: $quinary-color;
       th {
         text-align: left !important;
         padding: 10px;
