--- a/src/components/pagination/index.scss
+++ b/src/components/pagination/index.scss
@@ -1,9 +1,9 @@
-@import '../../styles/index.scss';
+@import "../../styles/index.scss";
 .pagination {
   .active {
     width: 30px;
     height: 26px;
     margin-right: 6px;
-    border: 1px solid $border-color;
+    border: 1px solid $primary-border-color;
   }
 }
