--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,18 +1,17 @@
 $primary-color: #164194;
 $secondary-color: #f1f1f1;
-$tertiary-color: #e0e0e0;
-$white-color: #fff;
-$quaternary-color: #f9f9f9;
-$quinary-color: #f2f2f2;
-$senary-color: #1e9cd8;
-$border-color: #cccccc;
-$octonary-color: #ff0000;
-$nonary-color: #707070;
-$decenary-color: #d6d6d6;
-$ash-color: #b3b2b3;
+$tertiary-color: #fff;
+$quaternary-color: #000;
+$quinary-color: #d6d6d6;
+$hexary-color: #ff0000;
+
 $hover-color: #2456b5;
-$light-border: #ececec;
+
+$primary-border-color: #cccccc;
+$secondary-border-color: #ececec;
+$tertiary-border-color: #e0e0e0;
 
 $primary-background-color: #164194;
 $secondary-background-color: #f1f1f1;
 $tertiary-background-color: #fff;
+$quaternary-background-color: #f9f9f9;
