--- a/src/app/(Blogs)/blogs/[slug]/page.scss
+++ b/src/app/(Blogs)/blogs/[slug]/page.scss
@@ -2,10 +2,10 @@
 
 .blog-details {
   padding-bottom: 80px;
-  border-bottom: 1px solid $border-color;
+  border-bottom: 1px solid $primary-border-color;
 }
 .border-area {
-  border-bottom: 1px solid $border-color;
+  border-bottom: 1px solid $primary-border-color;
 }
 
 .social {
@@ -13,20 +13,20 @@
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    border: 1px solid $border-color;
+    border: 1px solid $primary-border-color;
     padding: 5px;
     transition: all linear 0.3s;
     background: transparent;
 
     svg {
-      color: $black-color;
+      color: $quaternary-color;
     }
 
     &:hover {
       background: $primary-background-color;
 
       svg {
-        color: $white-color;
+        color: $tertiary-color;
       }
     }
   }
