--- a/src/app/emi/page.scss
+++ b/src/app/emi/page.scss
@@ -1,13 +1,13 @@
-@import '../../styles/index.scss';
+@import "../../styles/index.scss";
 .emi {
   padding-top: 60px;
   padding-bottom: 80px;
 
   .emi-table {
-    border: 1px solid $border-color;
+    border: 1px solid $primary-border-color;
 
     .border-color {
-      border-color: $border-color;
+      border-color: $primary-border-color;
     }
   }
 }
