--- a/src/app/profile/order/page.scss
+++ b/src/app/profile/order/page.scss
@@ -4,7 +4,7 @@
   box-shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.05);
 
   table {
-    border: 1px solid $decenary-color;
+    border: 1px solid $quinary-color;
   }
 
   .table-heading {
@@ -14,7 +14,7 @@
     tr {
       transition: all linear 0.3s;
       &:nth-child(even) {
-        background: $quaternary-color;
+        background: $quaternary-background-color;
       }
       &:hover {
         background: $secondary-background-color;
@@ -27,14 +27,14 @@
       }
       .info-icons {
         svg {
-          border: 1px solid $border-color;
+          border: 1px solid $primary-border-color;
           font-size: 20px;
           padding: 2px;
           border-radius: 50%;
           transition: all linear 0.3s;
           &:hover {
             background: $hover-color;
-            color: $white-color;
+            color: $tertiary-color;
           }
         }
       }
