--- a/src/components/explore/index.scss
+++ b/src/components/explore/index.scss
@@ -1,4 +1,4 @@
-@import '../../styles/index.scss';
+@import "../../styles/index.scss";
 
 .explore-card {
   padding: 16px;
@@ -10,7 +10,7 @@
       transition: all linear 0.3s;
     }
     p {
-      color: $black-color;
+      color: $quaternary-color;
       transition: all linear 0.3s;
     }
     &:hover {
