--- a/src/components/filterbox/index.scss
+++ b/src/components/filterbox/index.scss
@@ -1,7 +1,7 @@
-@import '../../styles/index.scss';
+@import "../../styles/index.scss";
 
 .filter-box {
-  // border: 1px solid $border-color;
+  // border: 1px solid $primary-border-color;
   box-sizing: border-box;
   box-shadow: 1px 1px 4px 0px rgba(29, 29, 29, 0.12);
   // border: 1px solid #f0f0f0;
