--- a/src/components/share-popup/index.scss
+++ b/src/components/share-popup/index.scss
@@ -13,7 +13,7 @@
   .media {
     margin-right: 5px;
     border-radius: 50%;
-    // border: 1px solid $border-color;
+    // border: 1px solid $primary-border-color;
     display: flex;
     justify-content: center;
     align-items: center;
