--- a/src/app/compare/page.scss
+++ b/src/app/compare/page.scss
@@ -5,7 +5,7 @@
 
   .compare-button {
     background: transparent;
-    color: #000;
+    color: $quaternary-color;
     border: 1px solid $primary-color;
     transition: all linear 0.3s;
 
