--- a/src/components/status-button/index.scss
+++ b/src/components/status-button/index.scss
@@ -15,7 +15,7 @@
 .slider {
   width: 14px;
   height: 14px;
-  background-color: white;
+  background-color: $tertiary-color;
   border-radius: 50%;
   position: absolute;
   transition: 0.2s;
